--- a/src/pages/Profile/ProgressGraph.css
+++ b/src/pages/Profile/ProgressGraph.css
@@ -1,8 +1,8 @@
 .graph-container {
     width: 100%;
     height: 300px;
-    background-color: var(--bg-alt);
+    background-color: var(--bg);
     border-radius: 1rem;
-    padding: 1em;
     box-sizing: border-box;
+    padding: 1em;
 }
